fix modal on mobile

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ img {
 }
 
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
   margin: 0px;
   -webkit-font-smoothing: antialiased;
   scroll-behavior: smooth;
